1998-02-15  Raja R Harinath  <harinath@cs.umn.edu>

	* gdk-card-image/Makefile.am (INCLUDES): Include $(X_LIBS).
	* src/Makefile.am (INCLUDES): Likewise.

	* configure.in (X_LIBS,x_libs,X_CFLAGS): Get either from topdir
	configure.in or from GNOME_X_CHECKS.

	* acconfig.h (HAVE_LIBSM): New tag.

Sat Feb 14 09:31:09 1998  Tom Tromey  <tromey@cygnus.com>

	* src/Makefile.am (freecell_LDADD): Find libgdkcardimage in build
	dir, not srcdir.
	(Games_DATA): New macro.

Sat Feb 14 16:39:23 KST 1998  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* autogen.sh: New file.
	* configure.in: Simplified config & build for splitted GNOME.
	* src/Makefile.am: Likewise.

1998-02-13  Raja R Harinath  <harinath@cs.umn.edu>

	* configure.in: Use AM_ACLOCAL_INCLUDE if built inside gnome tree.

Mon Feb  9 03:30:21 1998  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* src/freecell.c (parse_args): new function.
	(main): Move some GNOME stuffs to here from io-gtk.c
	(main): Added --help, --version options.

Fri Jan 30 11:26:23 EST 1998 Nathan Bryant <bryant@cs.usm.maine.edu>

	Gnome now builds on alpha-dec-osf3.2
	* configure.in: check for libSM
	* src/Makefile.am: remove -ldl -lSM -lICE, add $(DL_LIB)
	* src/freecell.c: include locale.h

Thu Jan 29 16:49:12 EST 1998 Nathan Bryant <bryant@cs.usm.maine.edu>

	* configure.in: remove fr from ALL_LINGUAS

Thu Jan 29 00:56:35 1998  Tom Tromey  <tromey@cygnus.com>

	* configure.in: Typo fix.

1998-01-28  Raja R Harinath  <harinath@cs.umn.edu>

	* configure.in: Use config.cache to detect if built in gnome tree.

	* src/Makefile.am: Don't look for libraries in $(srcdir).

Tue Jan 27 13:55:42 1998  Federico Mena  <federico@bananoid.nuclecu.unam.mx>

	* src/Makefile.am (install-data-local): Updated installation of
	.desktop file.

Wed Jan 28 07:47:11 1998  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* src/menu.c, src/menu.h, src/io-gtk.c, src/io-gtk.h:
	Use gnome_app_create_menus() and gnome_app_create_toolbar().
