@@ -1,3 +1,11 @@
+Tue Feb 17 23:06:43 KST 1998  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>
+
+	* src/score-dialog.c (score_dialog): No more modal dialog.
+	* src/option-dialog.c (option_dialog): Likewise.
+
+	* src/score.c: Change config names to "/freecell/...".
+	* src/option.c : Likewise.
+
 1998-02-15  Raja R Harinath  <harinath@cs.umn.edu>
 
 	* gdk-card-image/Makefile.am (INCLUDES): Include $(X_LIBS).
